--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title></title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/jquery.bxslider.min.css">
+        <!--<link rel="stylesheet" href="css/jquery.bxslider.min.css">-->
         <link rel="stylesheet" href="css/jquery.bxslider.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="css/nav.css">
@@ -13,7 +13,9 @@
     <body>
        <a name="home">
        <!--COMIENZA NAVEGACION -->
-       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+       <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>-->
+       <script src="js/jquery-1.11.2.min.js"></script>
+
        <script src="js/main.js"></script>
        <div class="nav-outer">
            <div class="nav-wrap">
@@ -41,7 +43,7 @@
        <div class="clearfix"></div>
        <!--COMIENZA SLIDERS -->
        <script src="js/jquery.bxslider.min.js"></script>
-       <script src="js/jquery.bxslider.js"></script>
+       <!--<script src="js/jquery.bxslider.js"></script>-->
        <div class="slide-wrap">
           <section class="slider">
               <ul class="slider1">
